# TritonRoute

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE  README.md
jenkins/: Dockerfile.dev  build.sh  build_centos7_clang7.sh  build_centos7_gcc8.sh  build_ubuntu20_clang7.sh  build_ubuntu20_gcc8.sh  install.sh  test.sh  test_centos7_clang7.sh  test_centos7_gcc8.sh  test_ubuntu20_clang7.sh  test_ubuntu20_gcc8.sh
jenkins/docker/: Dockerfile.centos.gcc  Dockerfile.centos7  Dockerfile.ubuntu20  build.sh  test.sh
src/: FlexAccessPattern.h  FlexRoute.cpp  FlexRoute.h  frBaseTypes.h  frDesign.h  frRTree.h  frRegionQuery.cpp  frRegionQuery.h  global.cpp  global.h  main.cpp  utility.cpp
src/db/drObj/: drAccessPattern.h  drBlockObject.h  drFig.h  drMarker.h  drNet.h  drPin.h  drRef.h  drShape.h  drVia.h
src/db/gcObj/: gcBlockObject.h  gcFig.h  gcNet.h  gcPin.h  gcShape.h
src/db/infra/: frBox.cpp  frBox.h  frPoint.h  frSegStyle.h  frTime.cpp  frTime.h  frTransform.h
src/db/taObj/: taBlockObject.h  taFig.h  taPin.h  taShape.h  taVia.h
src/db/tech/: frConstraint.h  frLayer.h  frLookupTbl.h  frTechObject.h  frViaDef.h
src/dr/: '  FlexDR.cpp  FlexDR.h  FlexDR_conn.cpp  FlexDR_end.cpp  FlexDR_init.cpp  FlexDR_maze.cpp  FlexDR_rq.cpp  FlexGridGraph.cpp  FlexGridGraph.h  FlexGridGraph_maze.cpp  FlexRegionQuery.cpp  FlexRegionQuery.h  FlexWavefront.h
src/drc/: frDRC.h  frDRC_init.cpp  frDRC_main.cpp  frDRC_setup.cpp  frDRC_util.cpp
src/gc/: FlexGC.cpp  FlexGC.h  FlexGC_end.cpp  FlexGC_init.cpp  FlexGC_main.cpp  FlexGC_rq.cpp
src/io/: defw.cpp  frAPG.cpp  frAPG.h  frPinPrep.cpp  frPinPrep.h  frShapeUtil.cpp  frShapeUtil.h  io.cpp  io.h  io_guide.cpp  io_parser_helper.cpp  io_pin.cpp
src/pa/: FlexPA.cpp  FlexPA.h  FlexPA_init.cpp  FlexPA_prep.cpp
src/rp/: FlexRP.cpp  FlexRP_init.cpp  FlexRP_prep.cpp
src/ta/: FlexTA.cpp  FlexTA.h  FlexTA_assign.cpp  FlexTA_end.cpp  FlexTA_init.cpp  FlexTA_rq.cpp
test/: fixture.cpp  fixture.h  gcTest.cpp  gc_test.cpp  run-ispd.tcl
test/testcase/ispd18_sample/: compare.tcl  run.sh
